--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
 theme: jekyll-theme-minimal
 title: poetry
 description: 當繆思來臨時
-navigation:
-  - title: 仲夏夜
-    url: #仲夏夜
-  - title: 仲夏夜之二
-    url: #仲夏夜之二
-  - title: 仲夏木槿鍥子
-    url: #仲夏木槿鍥子
+list:
+  - 仲夏夜
+  - 仲夏夜之二
+  - 仲夏木槿鍥子
 
