--- a/_config.yml
+++ b/_config.yml
@@ -1,44 +1,12 @@
 theme: jekyll-theme-minimal
 title: poetry
 description: 當繆思來臨時
-list:
-  - 仲夏木槿　之廿六
-  - 仲夏木槿　之廿五
-  - 仲夏木槿　之廿三
-  - 仲夏木槿　之廿二
-  - 仲夏木槿　之廿一
-  - 仲夏木槿　之廿
-  - 仲夏木槿　之十九
-  - 仲夏木槿　之十八
-  - 季秋木槿　之四
-  - 季秋木槿　之三
-  - 季秋木槿　之二
-  - 季秋木槿　之一
-  - 仲夏木槿　之十七
-  - 季秋木槿　契子
-  - 仲夏木槿　之十六
-  - 仲夏木槿　之十五
-  - 仲夏木槿　之十四
-  - 仲夏木槿　之十三
-  - 仲夏木槿　之十一
-  - 仲夏木槿　之十
-  - 仲夏木槿　之九
-  - 仲夏木槿　之八
-  - 仲夏木槿　之七
-  - 仲夏木槿　之六
-  - 仲夏木槿　之五
-  - 暮春木槿　之五
-  - 暮春木槿　之四
-  - 暮春木槿　之三
-  - 仲夏木槿　之四
-  - 仲夏木槿　之三
-  - 夢境　之三
-  - 夢境　之二
-  - 仲夏木槿　之二
-  - 暮春木槿　之二
-  - 夢境　之一
-  - 暮春木槿　之一
-  - 仲夏木槿　之一
-  - 仲夏木槿　鍥子
-  - 仲夏夜　之二
-  - 仲夏夜
+navigation:
+  - title: biography
+    url: https://zenkarsha.github.io/biography/
+  - title: poetry
+    url: https://zenkarsha.github.io/poetry/
+  - title: muse
+    url: https://zenkarsha.github.io/muse/
+  - title: whisper
+    url: https://zenkarsha.github.io/whisper/
