--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,12 @@ description: 當繆思來臨時
 navigation:
   - title: biography
     url: https://zenkarsha.github.io/biography/
-  - title: poetry
-    url: https://zenkarsha.github.io/poetry/
   - title: muse
     url: https://zenkarsha.github.io/muse/
   - title: whisper
     url: https://zenkarsha.github.io/whisper/
+  - title: works
+    url: https://zenkarsha.github.io/works/
+  - title: twitter
+    url: https://twitter.com/zenkarsha/
+
