--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ navigation:
     url: https://zenkarsha.github.io/favorite/
   - title: works
     url: https://zenkarsha.github.io/works/
+  - title: blog
+    url: https://zenkarsha.github.io/blog/
   - title: twitter
     url: https://twitter.com/zenkarsha/
 
